<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.panteleyev</groupId>
    <artifactId>money-manager</artifactId>
    <version>18.3.0</version>
    <packaging>jar</packaging>
    <name>MoneyManager</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>10</maven.compiler.source>
        <maven.compiler.target>10</maven.compiler.target>
        <app.main.class>org.panteleyev.money.MoneyApplication</app.main.class>
        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
    </properties>

    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>utilities</artifactId>
            <version>2.1.0</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>persistence</artifactId>
            <version>3.2.1</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>9.0.0-module</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.42-module</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.5-module</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.11.2-module</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.2-module</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.11</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <release>10</release>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>6.1</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <outputDirectory>target/jmods</outputDirectory>
                    <archive>
                        <manifestEntries>
                            <Main-Class>${app.main.class}</Main-Class>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>compile</includeScope>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>target/jmods</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.21.0</version>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>6.1</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.5.0</version>
                <executions>
                    <execution>
                        <id>dist-win</id>
                        <phase>none</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>
                                ${env.JAVA_HOME}/bin/javapackager
                            </executable>
                            <arguments>
                                <argument>-deploy</argument>
                                <argument>-BjvmOptions=-XX:NewRatio=1</argument>
                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx
                                </argument>
                                <argument>-BjvmOptions=-Dfile.encoding=UTF-8</argument>
                                <argument>-native</argument>
                                <argument>exe</argument>
                                <argument>-name</argument>
                                <argument>${project.name}</argument>
                                <argument>-outdir</argument>
                                <argument>target/dists</argument>
                                <argument>-outfile</argument>
                                <argument>${project.name}</argument>
                                <argument>-Bicon=icons/icons.ico</argument>
                                <argument>-BappVersion=${project.version}</argument>
                                <argument>-BsystemWide=true</argument>
                                <argument>-Bcopyright=Copyright (c) 2010, 2017, Petr Panteleyev</argument>
                                <argument>-Bvendor=Petr Panteleyev</argument>
                                <argument>-Bwin.menuGroup=Petr Panteleyev</argument>
                                <argument>--module-path</argument>
                                <argument>target/jmods</argument>
                                <argument>--module</argument>
                                <argument>org.panteleyev.money/${app.main.class}</argument>
                                <argument>-v</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>dist-mac</id>
                        <phase>none</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>
                                ${env.JAVA_HOME}/bin/javapackager
                            </executable>
                            <arguments>
                                <argument>-deploy</argument>
                                <argument>-BjvmOptions=-XX:NewRatio=1</argument>
                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx
                                </argument>
                                <argument>-BjvmOptions=-Dfile.encoding=UTF-8</argument>
                                <argument>-native</argument>
                                <argument>pkg</argument>
                                <argument>-name</argument>
                                <argument>${project.name}</argument>
                                <argument>-outdir</argument>
                                <argument>target/dists</argument>
                                <argument>-outfile</argument>
                                <argument>${project.name}</argument>
                                <argument>-Bicon=icons/icons.icns</argument>
                                <argument>-BappVersion=${project.version}</argument>
                                <argument>--module-path</argument>
                                <argument>target/jmods</argument>
                                <argument>--module</argument>
                                <argument>org.panteleyev.money/${app.main.class}</argument>
                                <argument>-v</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>dist-rpm</id>
                        <phase>none</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>
                                ${env.JAVA_HOME}/bin/javapackager
                            </executable>
                            <arguments>
                                <argument>-deploy</argument>
                                <argument>-BjvmOptions=-XX:NewRatio=1</argument>
                                <argument>-BjvmOptions=--add-exports javafx.base/com.sun.javafx.event=controlsfx
                                </argument>
                                <argument>-BjvmOptions=-Dfile.encoding=UTF-8</argument>
                                <argument>-native</argument>
                                <argument>rpm</argument>
                                <argument>-name</argument>
                                <argument>${project.name}</argument>
                                <argument>-outdir</argument>
                                <argument>target/dists</argument>
                                <argument>-outfile</argument>
                                <argument>Password Generator</argument>
                                <argument>-Bicon=icons/icon48.png</argument>
                                <argument>-BappVersion=${project.version}</argument>
                                <argument>-BsystemWide=true</argument>
                                <argument>-Bcopyright=Copyright (c) 2016, 2017, Petr Panteleyev</argument>
                                <argument>-Bvendor=Petr Panteleyev</argument>
                                <argument>-Bcategory=Utility</argument>
                                <argument>-Bemail=petr@panteleyev.org</argument>
                                <argument>-BlicenseType=BSD</argument>
                                <argument>--module-path</argument>
                                <argument>target/jmods</argument>
                                <argument>--module</argument>
                                <argument>org.panteleyev.money/${app.main.class}</argument>
                                <argument>-v</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
